# prints_charming

./: .gitignore  LICENSE  README.md  main.py  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
prints_charming/: __init__.py  color_maps.py  colors_wizard.py  dynamic_formatter.py  exceptions.py  exceptions_bkup.py  formatter.py  frame_builder.py  interactive_menu.py  interactive_wizard.py  internal_logging_utils.py  logging_utils.py  markdown_processor.py  prints_charming.py  prints_charming_defaults.py  prints_style.py  prints_ui.py  progress_bar.py  segment_styler.py  show_colors.py  table_manager.py  terminal_manager.py  terminal_size_watcher.py  textstyle.py  toggle_manager.py  trie_manager.py  ui.py  utils.py  win_utils.py
prints_charming/examples/: basic_exception_logging.py  basic_logging.py  boxes_example.py  calc_example.py  exceptions_example.py  frames.py  logging-granular.py  logging-simple.py  main.py  markdown.py  maze.py  menu.py  multi_column_boxes.py  newest.py  patterns.py  prints_ui.py  segment_with_splitter_and_style.py  snake_game.py
prints_charming/exceptions/: __init__.py  base_exceptions.py  internal_exceptions.py  utils.py
prints_charming/internal_logging/: log_manager.py
prints_charming/logging/: __init__.py  custom_formatter.py  custom_handler.py  formatter.py  log_handler.py
prints_charming/regex_patterns/: __init__.py  ansi_patterns.py  whitespace_patterns.py
prints_charming/settings/: color_maps.py  effect_maps.py  style_maps.py  unicode_maps.py
prints_charming/tests/: test_interactive_menu.py
(+3 files in other folders)
