[metadata]
name = prints_charming
version = 1.0.0
description = A Python library designed to simplify and enhance terminal text styling and coloring, optimized for developer experience.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deefifofun/prints_charming
author = DeeFiFoFun
author_email = dev@deefifofun.xyz

[options]
packages = find:
python_requires = >=3.10
