[metadata]
name = prints_charming
version = 2.0.0
description = The Ultimate Toolkit for Terminal Interfaces, Text Styling, and Advanced Functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deefifofun/prints_charming
author = DeeFiFoFun
author_email = dev@deefifofun.xyz

[options]
packages = find:
python_requires = >=3.10
